# PondM-3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
pico-w-firmware/: CMakeLists.txt  README.md  REFERENCE_PART1.md  wokwi.toml
pico-w-firmware/evidence/: backend-http-capture.txt  serial-log-sample.txt
pico-w-firmware/include/: config.h  lwipopts.h  network.h  sensors.h  telemetry.h
pico-w-firmware/simulation/wokwi/: diagram.json  wokwi.toml
pico-w-firmware/src/: main.c  network.c  sensors.c  telemetry.c
reports/k6/: run-2026-03-19-analysis.md  run-2026-03-19-summary.json
src/: api.ts  config.ts  db.ts  index.ts  logger.ts  migrate.ts  rabbitmq.ts  types.ts  validation.ts  worker.ts
tests/k6/: telemetry-load.js
